tests/cases/match/errors/match-nonexhaustive.ari
enum OptionI32 {
  None,
  Some(i32),
}

fn main() -> i64 {
  let value = Some(1);
  match value {
    Some(_) => {
      return 1;
    }
  }
  return 0;
}
